# app

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  entrypoint.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api-contract.yml  audit-button-coverage.yml  ci.yaml  deploy-dev.yaml  deploy-prd.yaml  regenerate-visual-baselines.yml
e2e/: 01-onboarding-welcome.spec.ts  02-create-seed.spec.ts  03-restore-seed.spec.ts  04-unlock-password.spec.ts  05-disconnect.spec.ts  06-balance.spec.ts  07-send.spec.ts  08-receive.spec.ts  09-network-and-shell.spec.ts  10-pwa.spec.ts  11-cross-spec-redirects.spec.ts  12-a11y.spec.ts  13-send-server-errors.spec.ts  README.md  _global-setup.ts  _global-teardown.ts  address.spec.ts  screenshot-flow.mjs  send-flow.spec.ts  settings.spec.ts  visual.spec.ts  wallet.spec.ts  webauthn.spec.ts
e2e/_audit/: coverage.mjs
e2e/_helpers/: api.ts  fixtures.ts  screenshot.ts  wallet.ts
public/: manifest.json  sw.js
public/handbook/: index.html
rust/: Cargo.toml
rust/client/: Cargo.toml  index.html  readme.md
rust/client/src/: index.html  lib.rs
rust/client/tests/: wasm.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
scripts/: sync-handbook-baselines.mjs
src/__tests__/: setup.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppShell.tsx  BottomNav.tsx  Footer.tsx  FooterLinks.tsx  Header.tsx  NetworkActivity.tsx  PasskeySetup.tsx  PixelIcon.tsx  PwaPrompt.tsx  SeedPhraseImport.tsx  SeedPhraseSetup.tsx  SendForm.tsx  SetPassword.tsx  TransactionLog.tsx  UnlockWallet.tsx  WalletCard.tsx
src/hooks/: useZkCoins.ts
src/lib/: features.ts  format.ts  simulate-network.ts  simulate.ts
src/stores/: auth.ts  capabilities.ts  (+2 more)
(+53 files in other folders)
