[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.95"
serde = { workspace = true }
serde_json = "1.0"
bitcoin = { workspace = true, default-features = false, features = ["std", "rand", "serde", "rand-std"] }
shared = { path = "../shared/" }
hex = "0.4.3"
bip39 = "2"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
