[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
sha2 = "0.10.8"
rand = "0.8"
lazy_static = "1.5.0"
hex = "0.4.3"
bip39 = "2"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]
